--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <a href="#">newest</a>
                 <a href="#">most recomended</a>
                 <a href="#">haha!</a>
+                <a href="#">whatcha say!</a>
               </div>
             </div>
             <div class="dropdown">
@@ -41,6 +42,7 @@
 
             <div class="dropdown">
               <button class="dropbtn">About Us</button>
+              <a href="#">Reach out</a>
               <div class="dropdown-content">
                               </div>
             </div>
